# surakarta-core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-test.yml  code-ql.yml  correctness.yml  local.correctness.yml  remote.correctness.yml  submodule-sync.yml
include/: global_random_generator.h  surakarta.h  surakarta_agent_base.h  surakarta_agent_factory.h  surakarta_agent_interactive.h  surakarta_agent_mine.h  surakarta_agent_random.h  surakarta_board.h  surakarta_common.h  surakarta_daemon.h  surakarta_event.h  surakarta_game.h  surakarta_logger.h  surakarta_piece.h  surakarta_reason.h  surakarta_rule_manager.h  surakarta_rule_manager_impl.h  surakarta_utils.h
src/: CMakeLists.txt  global_random_generator.cpp  main.cpp  surakarta_agent_interactive.cpp  surakarta_agent_mine.cpp  surakarta_agent_random.cpp  surakarta_animation.cpp  surakarta_daemon.cpp  surakarta_game.cpp  surakarta_game.h  surakarta_logger.cpp  surakarta_reason.cpp  surakarta_rule_manager.cpp  surakarta_rule_manager_impl.cpp  surakarta_utils.cpp
src/hello_cpp/: hello_cpp.h  hello_cpp_defs.h
src/surakarta/: CMakeLists.txt  global_random_generator.h  main.cpp  surakarta_board.h  surakarta_game.cpp  surakarta_reason.h  surakarta_rule_manager.cpp  surakarta_rule_manager_impl.cpp  surakarta_rule_manager_impl.h  surakarta_utils.h
src/surakarta/surakarta_agent/: surakarta_agent_base.h  surakarta_agent_mine.cpp  surakarta_agent_mine.h
src/surakarta_agent/: surakarta_agent_base.h  surakarta_agent_interactive.cpp  surakarta_agent_mine.cpp  surakarta_agent_mine.h  surakarta_agent_random.cpp  surakarta_agent_random.h
src/surakarta_ta/: CMakeLists.txt
src/tests/: CMakeLists.txt  surakarta_rule_manager_test.cpp
src/tests/test_data/: game3.txt
test/: CMakeLists.txt  surakarta_rule_manager_imp.h  surakarta_rule_manager_test.cpp
